--- a/themes/themeRed.css
+++ b/themes/themeRed.css
@@ -8,6 +8,10 @@ body {
   color: #fff;
 }
 
+.button.flickering {
+  border: 0.3vh solid #dcb2b2;
+}
+
 .button:disabled {
   background-color: #777;
   border: 0.3vh solid #444;
